Added FreeTV process

--- a/avails/notebooks/availsCleanup.ipynb
+++ b/avails/notebooks/availsCleanup.ipynb
@@ -51,7 +51,7 @@
     "    new_df[column] = new_values\n",
     "    return new_df\n",
     "\n",
-    "def cleanup(df, suffix=''):\n",
+    "def cleanup(df):\n",
     "    df['Non-Exclusive Date'] = df['Non-Exclusive Date'].replace('NOT AVAIL', np.nan).astype('datetime64')\n",
     "    df['Non-Exclusive Date'] = df.apply(lambda x: dt.date.today() if x['Available?'] == 'Avail NE' else x['Non-Exclusive Date'], axis=1)\n",
     "    max_prev_sale_enddate = df['Previous Sale Activity'].str.extractall(r'(\\d{2}[-]\\w{3}[-]\\d{4})').astype('datetime64').reset_index().groupby('level_0')[0].max()\n",
@@ -235,20 +235,8 @@
     "screeners = pd.read_excel('Z:\\LEDAFILMS\\Alteryx\\Filmtracks\\Project Data ID.xlsx')\n",
     "screeners.dropna(axis=0, subset=['Unique Identifier'], inplace=True)\n",
     "screeners['Unique Id'] = screeners['Unique Identifier'].astype(int)\n",
-    "screeners.drop(['Unique Identifier', 'Title', 'Web Site'], axis = 1, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-01-12T01:57:54.193116Z",
-     "start_time": "2021-01-12T01:57:53.492114Z"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "screeners.drop(['Unique Identifier', 'Title', 'Web Site'], axis = 1, inplace=True)\n",
+    "\n",
     "ratings = pd.read_excel('Z:\\LEDAFILMS\\Alteryx\\Filmtracks\\Ratings & Titles.xls')\n",
     "ratings.dropna(axis=0, subset=['Unique Identifier'], inplace=True)\n",
     "ratings['Unique Id'] = ratings['Unique Identifier'].astype(int)\n",
