Several date fixes

--- a/avails/notebooks/availsCleanup.ipynb
+++ b/avails/notebooks/availsCleanup.ipynb
@@ -2,37 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-21T01:07:53.480113Z",
-     "start_time": "2021-01-21T01:07:46.719824Z"
+     "end_time": "2021-02-27T16:52:28.312236Z",
+     "start_time": "2021-02-27T16:52:27.935949Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\pandas\\core\\indexing.py:190: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  self._setitem_with_indexer(indexer, value)\n",
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\pandas\\core\\indexing.py:190: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  self._setitem_with_indexer(indexer, value)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import datetime as dt\n",
-    "\n",
-    "\n",
+    "import datetime as dt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-27T18:37:00.321999Z",
+     "start_time": "2021-02-27T18:37:00.275518Z"
+    }
+   },
+   "outputs": [],
+   "source": [
     "def tidy_split(df, column, sep=',', keep=False):\n",
     "    \"\"\"\n",
     "    Split the values of a column and expand so the new DataFrame has one split\n",
@@ -83,30 +77,32 @@
     "    return df.join(sale_act, on='Unique Id', how='left').sort_values(by='Unique Id'), [str(col) + suffix for col in sale_act.columns]\n",
     "\n",
     "def cleanup(df, suffix=''):\n",
-    "    df['Non-Exclusive Date'] = df['Non-Exclusive Date'].replace('NOT AVAIL', np.nan).astype('datetime64')\n",
-    "    df['Non-Exclusive Date'] = df.apply(lambda x: dt.date.today() if x['Available?'] == 'Avail NE' else x['Non-Exclusive Date'], axis=1)\n",
-    "    max_prev_sale_enddate = df['Previous Sale Activity'].str.extractall(r'(\\d{2}[-]\\w{3}\\.?[-]\\d{4})').replace('.', '')\n",
+    "    date_map = {'NOW': today, 'NOT AVAIL': pd.NaT, 'NOT ACQ': pd.NaT}\n",
+    "    df['Non-Exclusive Date'] = df['Non-Exclusive Date'].replace(date_map)\n",
+    "    df['Exclusive Date'] = df['Exclusive Date'].replace(date_map)\n",
+    "    df['Non-Exclusive Date'] = df.apply(lambda x: today if x['Available?'] == 'Avail NE' else x['Non-Exclusive Date'], axis=1)\n",
+    "    max_prev_sale_enddate = df['Previous Sale Activity'].str.extractall(r'(\\d{2}\\-\\w{3}(\\.)?\\-\\d{4})').replace('.', '')\n",
     "    date_dict = {'ene': '01', 'feb': '02', 'mar': '03', 'abr': '04', 'may':'05', 'jun': '06', 'jul': '07', 'ago': '08', 'sep':'09', 'oct': '10', 'nov': '11', 'dic': '12'}\n",
     "    max_prev_sale_enddate = max_prev_sale_enddate.replace(date_dict, regex=True)\n",
-    "    max_prev_sale_enddate = max_prev_sale_enddate.astype('datetime64').reset_index().groupby('level_0')[0].max()\n",
+    "    max_prev_sale_enddate = max_prev_sale_enddate.astype('datetime64[ns]').reset_index().groupby('level_0')[0].max()\n",
     "    max_prev_sale_enddate = max_prev_sale_enddate + pd.DateOffset(1)\n",
     "    df['max_prev_sale_enddate'] = max_prev_sale_enddate\n",
-    "    df['Exclusive Date'] = df['Exclusive Date'].replace(['NOT AVAIL', 'NOT ACQ'], np.nan).astype('datetime64')\n",
     "    max_prev_sale_enddate = df[['Exclusive Date', 'max_prev_sale_enddate']].max(axis=1)\n",
     "    df['Exclusive Date'] = max_prev_sale_enddate\n",
-    "    mask = df['Holdback'] <= dt.datetime.today()\n",
+    "    df['Holdback'] = df['Holdback'].apply(lambda x: pd.Timestamp.date(x))\n",
+    "    mask = df['Holdback'] <= today\n",
     "    df['Holdback'].loc[mask] = pd.NaT\n",
-    "    mask = (df['Non-Exclusive Date'] < df['Exclusive Date']) & (df['Non-Exclusive Date'] > dt.datetime.today())\n",
+    "    df['Non-Exclusive Date'] = df['Non-Exclusive Date'].apply(lambda x: pd.Timestamp.date(x))\n",
+    "    df['Exclusive Date'] = df['Exclusive Date'].apply(lambda x: pd.Timestamp.date(x))\n",
+    "    mask = (df['Non-Exclusive Date'] < df['Exclusive Date']) & (df['Non-Exclusive Date'] > today)\n",
     "    df['Available?'].loc[mask] = df['Non-Exclusive Date'].loc[mask]\n",
-    "    df['Available?'] = df['Available?'].apply(lambda x: pd.Timestamp(x) if type(x) == int else x)\n",
+    "    df['Available?'] = df['Available?'].apply(lambda x: pd.Timestamp.date(pd.Timestamp(x)) if type(x) == int else x)\n",
     "    df['First Run or Library'] = df['Is Reissue?'].fillna('First Run')\n",
     "    df['First Run or Library'] = df['First Run or Library'].map({'Yes': 'Library', 'First Run': 'First Run'})\n",
-    "    \n",
-    "    \n",
+    "\n",
     "    df, sales = sale_activity(df, suffix)\n",
     "\n",
     "    df.columns = list(df.columns[:13]) + [str(col) + suffix for col in df.columns[13:]]\n",
-    "    \n",
     "    return df, sales\n",
     "\n",
     "def process(df, sales, screeners, ratings):\n",
@@ -155,41 +151,89 @@
     "    df = pd.merge(df, screeners, on='Unique Id', how='left')\n",
     "    df = pd.merge(df, ratings, on='Unique Id', how='left')\n",
     "    acq_exp_cols = [col for col in df.columns if 'Acq. Expires' in col]\n",
-    "    expiry_dates = df[acq_exp_cols[0]].apply(lambda x: x.date())\n",
+    "    expiry_dates = df[acq_exp_cols[0]].apply(lambda x: pd.Timestamp.date(x))\n",
     "    df.drop(acq_exp_cols, axis=1, inplace=True)\n",
     "    df['Acq. Expires'] = expiry_dates\n",
     "    date_cols = [col for col in df.columns if 'Date' in col]\n",
     "    df[date_cols] = df[date_cols].replace({pd.Timestamp.max: pd.NaT})\n",
     "\n",
     "    for col in date_cols:\n",
-    "        df[col] = df[col].apply(lambda x: x.date())\n",
-    "        df[col] = df[col].apply(lambda x: 'Now' if x == dt.date.today() else x)\n",
-    "\n",
+    "        mask = df[col] >= df['Acq. Expires']\n",
+    "        df[col].loc[mask] = pd.NaT\n",
+    "        df[col] = df[col].apply(lambda x: 'Now' if x == today else x)\n",
+    "        \n",
     "    df['Year'] = df['Year Completed']\n",
     "    df[sales] = df[sales].apply(lambda x: x.apply(lambda x: str(x)[:10] if str(x) != 'nan' else ''))\n",
-    "    df[[col for col in df.columns if 'Available' in col]] = df[[col for col in df.columns if 'Available' in col]].apply(lambda x: x.apply(lambda x: pd.Timestamp(x) if type(x) == int else x))\n",
+    "    df[[col for col in df.columns if 'Available' in col]] = df[[col for col in df.columns if 'Available' in col]].apply(lambda x: x.apply(lambda x: pd.Timestamp.date(pd.Timestamp(x)) if type(x) == int else x))\n",
     "    df[[col for col in df.columns if 'Available' in col]] = df[[col for col in df.columns if 'Available' in col]].apply(lambda x: x.apply(lambda x: str(x).replace(' 00:00:00', '')))\n",
     "    df[[col for col in df.columns if 'Holdback' in col]] = df[[col for col in df.columns if 'Holdback' in col]].apply(lambda x: x.apply(lambda x: str(x).replace(' 00:00:00', '')))\n",
-    "    df = df.apply(lambda x: x.apply(lambda x: '' if str(x) == 'NaT' else x))\n",
+    "    df[[col for col in df.columns if 'Date' in col]] = df[[col for col in df.columns if 'Date' in col]].apply(lambda x: x.apply(lambda x: str(x).replace(' 00:00:00', '')))\n",
+    "    df = df.apply(lambda x: x.apply(lambda x: '' if (str(x) == 'NaT' or str(x) == 'None' or str(x) == '0001-01-01') else x))\n",
     "\n",
-    "    return df\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-27T18:37:03.007003Z",
+     "start_time": "2021-02-27T18:37:01.533614Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/alejandroleda/opt/anaconda3/envs/generalCondaEnv/lib/python3.8/site-packages/pandas/core/indexing.py:1637: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self._setitem_single_block(indexer, value, name)\n",
+      "<ipython-input-46-82f8b6944bc7>:39: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will*not* be treated as literal strings when regex=True.\n",
+      "  sale_act['Previous Sale Activity'] = sale_act['Previous Sale Activity'].str.replace('.', '')\n",
+      "/Users/alejandroleda/opt/anaconda3/envs/generalCondaEnv/lib/python3.8/site-packages/pandas/core/indexing.py:1637: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self._setitem_single_block(indexer, value, name)\n",
+      "<ipython-input-46-82f8b6944bc7>:39: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will*not* be treated as literal strings when regex=True.\n",
+      "  sale_act['Previous Sale Activity'] = sale_act['Previous Sale Activity'].str.replace('.', '')\n",
+      "/Users/alejandroleda/opt/anaconda3/envs/generalCondaEnv/lib/python3.8/site-packages/pandas/core/indexing.py:1637: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self._setitem_single_block(indexer, value, name)\n",
+      "<ipython-input-46-82f8b6944bc7>:39: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will*not* be treated as literal strings when regex=True.\n",
+      "  sale_act['Previous Sale Activity'] = sale_act['Previous Sale Activity'].str.replace('.', '')\n",
+      "/Users/alejandroleda/opt/anaconda3/envs/generalCondaEnv/lib/python3.8/site-packages/pandas/core/indexing.py:1637: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self._setitem_single_block(indexer, value, name)\n"
+     ]
+    }
+   ],
+   "source": [
+    "svod_avails = pd.read_excel('/Users/alejandroleda/Downloads/Availability by Region with Reissues - SVOD.xlsx', skiprows=1)\n",
     "\n",
+    "ptv_avails = pd.read_excel('/Users/alejandroleda/Downloads/Availability by Region with Reissues - Basic Pay TV.xlsx', skiprows=1)\n",
     "\n",
-    "svod_avails = pd.read_excel('C:/Users/aleja/Downloads/Availability by Region with Reissues - SVOD (6) (1).xlsx', skiprows=1)\n",
+    "ptv_local_avails = pd.read_excel('/Users/alejandroleda/Downloads/Availability by Region with Reissues - SVOD.xlsx', skiprows=1)\n",
     "\n",
-    "ptv_avails = pd.read_excel('C:/Users/aleja/Downloads/Availability by Region with Reissues - Basic Pay TV (6) (1).xlsx', skiprows=1)\n",
-    "\n",
-    "ptv_local_avails = pd.read_excel('C:/Users/aleja/Downloads/Availability by Region with Reissues - Basic Pay TV (Local) (5) (1).xlsx', skiprows=1)\n",
-    "\n",
-    "screeners = pd.read_excel('Z:\\LEDAFILMS\\Alteryx\\Filmtracks\\Project Data ID.xlsx')\n",
+    "screeners = pd.read_excel('/Users/alejandroleda/Documents/Ledafilms/Misc/Temp/Project Data ID.xlsx')\n",
     "screeners.dropna(axis=0, subset=['Unique Identifier'], inplace=True)\n",
     "screeners['Unique Id'] = screeners['Unique Identifier'].astype(int)\n",
     "screeners.drop(['Unique Identifier', 'Title', 'Web Site'], axis = 1, inplace=True)\n",
     "\n",
-    "ratings = pd.read_excel('Z:\\LEDAFILMS\\Alteryx\\Filmtracks\\Ratings & Titles.xls')\n",
+    "ratings = pd.read_excel('/Users/alejandroleda/Documents/Ledafilms/Misc/Temp/Ratings & Titles.xls')\n",
     "ratings.dropna(axis=0, subset=['Unique Identifier'], inplace=True)\n",
     "ratings['Unique Id'] = ratings['Unique Identifier'].astype(int)\n",
     "ratings.drop(['Unique Identifier', 'Title', 'Imdb'], axis = 1, inplace=True)\n",
+    "\n",
+    "today = pd.Timestamp.date(pd.Timestamp.today())\n",
     "\n",
     "svod_avails, svod_sales = cleanup(svod_avails, '_SVOD')\n",
     "ptv_avails, ptv_sales = cleanup(ptv_avails, '_PanRegionalPayTV')\n",
@@ -232,16 +276,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 48,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-21T01:07:56.000580Z",
-     "start_time": "2021-01-21T01:07:55.322073Z"
+     "end_time": "2021-02-27T18:37:06.535078Z",
+     "start_time": "2021-02-27T18:37:06.132561Z"
     }
    },
    "outputs": [],
    "source": [
-    "df[cols_ordered + sales].to_excel('C:/Users/aleja/Documents/Alteryx/Ledafilms Data/Avails/Temp/SVOD-PayTV avails.xlsx')"
+    "df[cols_ordered + sales].to_excel('/Users/alejandroleda/Documents/Ledafilms/Misc/Temp/SVOD-PayTV avails.xlsx')"
    ]
   }
  ],
@@ -261,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
